<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/NavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@color/blue"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:background="#F6F6F6"
        android:contentDescription="@string/banner_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356"
        app:srcCompat="@drawable/conversion_banner" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_from"
        app:layout_constraintBottom_toBottomOf="@+id/input_from"
        app:layout_constraintEnd_toEndOf="@+id/label_to"
        app:layout_constraintTop_toTopOf="@+id/input_from" />

    <EditText
        android:id="@+id/input_from"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_unit"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/input_to"
        app:layout_constraintTop_toBottomOf="@+id/imageView8" />

    <TextView
        android:id="@+id/label_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_to"
        app:layout_constraintBottom_toBottomOf="@+id/input_to"
        app:layout_constraintEnd_toEndOf="@+id/label_value"
        app:layout_constraintTop_toTopOf="@+id/input_to" />

    <EditText
        android:id="@+id/input_to"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_unit"
        android:inputType="text"
        android:minHeight="48dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/input_value"
        app:layout_constraintTop_toBottomOf="@+id/input_from" />

    <TextView
        android:id="@+id/label_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/label_value"
        app:layout_constraintBottom_toBottomOf="@+id/input_value"
        app:layout_constraintEnd_toStartOf="@+id/convert_btn"
        app:layout_constraintTop_toTopOf="@+id/input_value" />

    <EditText
        android:id="@+id/input_value"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_value"
        android:inputType="numberDecimal|numberSigned"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/label_value"
        app:layout_constraintTop_toBottomOf="@+id/input_to" />

    <Button
        android:id="@+id/convert_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue"
        android:enabled="false"
        android:text="@string/btn"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/result"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_value" />

</androidx.constraintlayout.widget.ConstraintLayout>